--- a/gui/invoice-system.ui
+++ b/gui/invoice-system.ui
@@ -132,7 +132,6 @@
                                     <property name="xalign">0.0</property>
                                     <layout>
                                       <property name="column">0</property>
-                                      <property name="column-span">2</property>
                                       <property name="row">3</property>
                                     </layout>
                                   </object>
@@ -173,13 +172,12 @@
                                     <property name="xalign">0.0</property>
                                     <layout>
                                       <property name="column">0</property>
-                                      <property name="column-span">2</property>
                                       <property name="row">9</property>
                                     </layout>
                                   </object>
                                 </child>
                                 <child>
-                                  <object class="GtkColumnView" id="tme-new-invoice-material-used">
+                                  <object class="GtkColumnView" id="tme-new-invoice-material">
                                     <property name="hadjustment">
                                       <object class="GtkAdjustment"/>
                                     </property>
@@ -211,7 +209,7 @@
                                     <property name="margin-bottom">10</property>
                                     <layout>
                                       <property name="column">2</property>
-                                      <property name="column-span">2</property>
+                                      <property name="column-span">3</property>
                                       <property name="row">0</property>
                                     </layout>
                                   </object>
@@ -274,8 +272,19 @@
                                     <property name="valign">center</property>
                                     <layout>
                                       <property name="column">2</property>
-                                      <property name="column-span">2</property>
+                                      <property name="column-span">3</property>
                                       <property name="row">1</property>
+                                    </layout>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkButton" id="tme-invoice-material-button">
+                                    <property name="halign">end</property>
+                                    <property name="label">Byvoeg</property>
+                                    <property name="valign">center</property>
+                                    <layout>
+                                      <property name="column">1</property>
+                                      <property name="row">9</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -352,6 +361,17 @@
                                     <layout>
                                       <property name="column">1</property>
                                       <property name="row">8</property>
+                                    </layout>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkButton" id="tme-invoice-description-button">
+                                    <property name="halign">end</property>
+                                    <property name="label">Byvoeg</property>
+                                    <property name="valign">center</property>
+                                    <layout>
+                                      <property name="column">1</property>
+                                      <property name="row">3</property>
                                     </layout>
                                   </object>
                                 </child>
