--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -487,6 +487,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="tme-statement-label">
+                                    <property name="halign">start</property>
                                     <property name="label">Staat</property>
                                     <layout>
                                       <property name="column">0</property>
@@ -496,6 +497,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="tme-statement-invoice-label">
+                                    <property name="halign">start</property>
                                     <property name="label">Fakture</property>
                                     <layout>
                                       <property name="column">0</property>
@@ -1271,6 +1273,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="tce-statement-label">
+                                    <property name="halign">start</property>
                                     <property name="label">Staat</property>
                                     <layout>
                                       <property name="column">0</property>
@@ -1280,6 +1283,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkLabel" id="tce-statement-invoice-label">
+                                    <property name="halign">start</property>
                                     <property name="label">Fakture</property>
                                     <layout>
                                       <property name="column">0</property>
