--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -1496,7 +1496,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">3</property>
+                                      <property name="row">4</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1507,7 +1507,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">4</property>
+                                      <property name="row">5</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1518,7 +1518,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">7</property>
+                                      <property name="row">8</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1529,7 +1529,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">9</property>
+                                      <property name="row">10</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1540,7 +1540,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">8</property>
+                                      <property name="row">9</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1551,7 +1551,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">10</property>
+                                      <property name="row">11</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1566,7 +1566,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">6</property>
+                                      <property name="row">7</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1576,7 +1576,7 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">11</property>
+                                      <property name="row">12</property>
                                     </layout>
                                   </object>
                                 </child>
@@ -1602,7 +1602,18 @@
                                     <layout>
                                       <property name="column">0</property>
                                       <property name="column-span">3</property>
-                                      <property name="row">5</property>
+                                      <property name="row">6</property>
+                                    </layout>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkEntry" id="tce-business-info-area-code-entry">
+                                    <property name="placeholder-text">Area kode . . .</property>
+                                    <property name="text">6536</property>
+                                    <layout>
+                                      <property name="column">0</property>
+                                      <property name="column-span">3</property>
+                                      <property name="row">3</property>
                                     </layout>
                                   </object>
                                 </child>
