--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -220,7 +220,7 @@
                                     <property name="vexpand">True</property>
                                     <layout>
                                       <property name="column">2</property>
-                                      <property name="column-span">2</property>
+                                      <property name="column-span">3</property>
                                       <property name="row">4</property>
                                       <property name="row-span">10</property>
                                     </layout>
@@ -235,6 +235,7 @@
                                     <property name="vexpand">True</property>
                                     <layout>
                                       <property name="column">3</property>
+                                      <property name="column-span">2</property>
                                       <property name="row">16</property>
                                     </layout>
                                   </object>
@@ -272,7 +273,7 @@
                                     <property name="valign">center</property>
                                     <layout>
                                       <property name="column">2</property>
-                                      <property name="column-span">2</property>
+                                      <property name="column-span">3</property>
                                       <property name="row">1</property>
                                     </layout>
                                   </object>
@@ -1635,5 +1636,25 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkMessageDialog" id="save-button-alert">
+    <property name="accessible-role">dialog</property>
+    <property name="buttons">yes-no</property>
+    <property name="deletable">False</property>
+    <property name="destroy-with-parent">True</property>
+    <property name="hide-on-close">True</property>
+    <property name="message-type">question</property>
+    <property name="text">Is u seker u wil die inligting stoor?</property>
+    <property name="title">Waarskuwing</property>
+    <property name="transient-for">main-window</property>
+  </object>
+  <object class="GtkMessageDialog" id="wrong-info-alert">
+    <property name="buttons">close</property>
+    <property name="message-type">warning</property>
+    <property name="text">1) - Is alle inskrywingsvelde ingevul?
+
+2) - Is u e-pos korrek ingevul?</property>
+    <property name="title">Maak Seker Oor Die Volgende</property>
+    <property name="transient-for">main-window</property>
   </object>
 </interface>
